Edit recipes names

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/pizza.html">Pizza Recipes</a></li>
-        <li><a href="recipes/maggi.html">Pizza Recipes</a></li>
-        <li><a href="recipes/cake.html">Pizza Recipes</a></li>
+        <li><a href="recipes/maggi.html">Maggi Recipes</a></li>
+        <li><a href="recipes/cake.html">Cake Recipes</a></li>
     </ul>
 </body>
 </html>
