Update image link

--- a/recipes/maggi.html
+++ b/recipes/maggi.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Maggi</h1>
-        <img src="../recipes/maggi.jpeg" alt="Maggi">
+        <img src="../images/maggi.jpeg" alt="Maggi">
     <h1>Description</h1>
         <p>Maggi recipe - Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium animi esse ex laboriosam ea ipsam sed molestias non dolor odio facilis, impedit corporis sint tempore nostrum cupiditate commodi at. Quod.</p>
     <ul>
