--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Pizza</h1>
-        <img src="../recipes/download.jpeg" alt="Pizza">
+        <img src="../images/pizza.jpeg" alt="Pizza">
     <h1>Description</h1>
         <p>Pizza recipe - Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium animi esse ex laboriosam ea ipsam sed molestias non dolor odio facilis, impedit corporis sint tempore nostrum cupiditate commodi at. Quod.</p>
     <ul>
