--- a/recipes/cake.html
+++ b/recipes/cake.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Cake</h1>
-        <img src="../recipes/cake.jpeg" alt="Cake">
+        <img src="../images/cake.jpeg" alt="Cake">
     <h1>Description</h1>
         <p>Cake recipe - Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium animi esse ex laboriosam ea ipsam sed molestias non dolor odio facilis, impedit corporis sint tempore nostrum cupiditate commodi at. Quod.</p>
     <ul>
